@@ -2,29 +2,29 @@ package com.github.jengelman.gradle.plugins.shadow.tasks;
 
 import com.github.jengelman.gradle.plugins.shadow.ShadowStats;
 import com.github.jengelman.gradle.plugins.shadow.internal.*;
+import com.github.jengelman.gradle.plugins.shadow.relocation.CacheableRelocator;
 import com.github.jengelman.gradle.plugins.shadow.relocation.Relocator;
 import com.github.jengelman.gradle.plugins.shadow.relocation.SimpleRelocator;
-import com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer;
-import com.github.jengelman.gradle.plugins.shadow.transformers.GroovyExtensionModuleTransformer;
-import com.github.jengelman.gradle.plugins.shadow.transformers.ServiceFileTransformer;
-import com.github.jengelman.gradle.plugins.shadow.transformers.Transformer;
+import com.github.jengelman.gradle.plugins.shadow.transformers.*;
 import org.gradle.api.Action;
+import org.gradle.api.Task;
 import org.gradle.api.artifacts.Configuration;
+import org.gradle.api.file.DuplicatesStrategy;
 import org.gradle.api.file.FileCollection;
 import org.gradle.api.internal.DocumentationRegistry;
 import org.gradle.api.internal.file.FileResolver;
 import org.gradle.api.internal.file.copy.CopyAction;
-import org.gradle.api.tasks.InputFiles;
-import org.gradle.api.tasks.Internal;
-import org.gradle.api.tasks.Optional;
-import org.gradle.api.tasks.TaskAction;
+import org.gradle.api.specs.Spec;
+import org.gradle.api.tasks.*;
 import org.gradle.api.tasks.bundling.Jar;
 import org.gradle.api.tasks.util.PatternSet;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.Callable;
 
+@CacheableTask
 public class ShadowJar extends Jar implements ShadowSpec {
 
     private List<Transformer> transformers;
@@ -39,6 +39,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
 
     public ShadowJar() {
         super();
+        setDuplicatesStrategy(DuplicatesStrategy.INCLUDE); //shadow filters out files later. This was the default behavior in  Gradle < 6.x
         versionUtil = new GradleVersionUtil(getProject().getGradle().getGradleVersion());
         dependencyFilter = new DefaultDependencyFilter(getProject());
         dependencyFilterForMinimize = new MinimizeDependencyFilter(getProject());
@@ -46,6 +47,29 @@ public class ShadowJar extends Jar implements ShadowSpec {
         transformers = new ArrayList<>();
         relocators = new ArrayList<>();
         configurations = new ArrayList<>();
+
+        this.getInputs().property("minimize", new Callable<Boolean>() {
+            @Override
+            public Boolean call() throws Exception {
+                return minimizeJar;
+            }
+        });
+        this.getOutputs().doNotCacheIf("Has one or more transforms or relocators that are not cacheable", new Spec<Task>() {
+            @Override
+            public boolean isSatisfiedBy(Task task) {
+                for (Transformer transformer : transformers) {
+                    if (!isCacheableTransform(transformer.getClass())) {
+                        return true;
+                    }
+                }
+                for (Relocator relocator : relocators) {
+                    if (!isCacheableRelocator(relocator.getClass())) {
+                        return true;
+                    }
+                }
+                return false;
+            }
+        });
     }
 
     public ShadowJar minimize() {
@@ -76,7 +100,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
     protected CopyAction createCopyAction() {
         DocumentationRegistry documentationRegistry = getServices().get(DocumentationRegistry.class);
         final UnusedTracker unusedTracker = minimizeJar ? UnusedTracker.forProject(getProject(), configurations, dependencyFilterForMinimize) : null;
-        return new ShadowCopyAction(getArchivePath(), getInternalCompressor(), documentationRegistry,
+        return new ShadowCopyAction(getArchiveFile().get().getAsFile(), getInternalCompressor(), documentationRegistry,
                 this.getMetadataCharset(), transformers, relocators, getRootPatternSet(), shadowStats,
                 versionUtil, isPreserveFileTimestamps(), minimizeJar, unusedTracker);
     }
@@ -93,7 +117,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
         getLogger().info(shadowStats.toString());
     }
 
-    @InputFiles
+    @Classpath
     public FileCollection getIncludedDependencies() {
         return getProject().files(new Callable<FileCollection>() {
 
@@ -133,7 +157,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
      * @param clazz the transformer to add. Must have a no-arg constructor
      * @return this
      */
-    public ShadowJar transform(Class<? extends Transformer> clazz) throws InstantiationException, IllegalAccessException {
+    public ShadowJar transform(Class<? extends Transformer> clazz) throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         return transform(clazz, null);
     }
 
@@ -144,13 +168,14 @@ public class ShadowJar extends Jar implements ShadowSpec {
      * @param c the configuration for the transformer
      * @return this
      */
-    public <T extends Transformer> ShadowJar transform(Class<T> clazz, Action<T> c) throws InstantiationException, IllegalAccessException {
-        T transformer = clazz.newInstance();
-        if (c != null) {
-            c.execute(transformer);
-        }
-        transformers.add(transformer);
+    public <T extends Transformer> ShadowJar transform(Class<T> clazz, Action<T> c) throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+        T transformer = clazz.getDeclaredConstructor().newInstance();
+        addTransform(transformer, c);
         return this;
+    }
+
+    private boolean isCacheableTransform(Class<? extends Transformer> clazz) {
+        return clazz.isAnnotationPresent(CacheableTransformer.class);
     }
 
     /**
@@ -160,8 +185,16 @@ public class ShadowJar extends Jar implements ShadowSpec {
      * @return this
      */
     public ShadowJar transform(Transformer transformer) {
-        transformers.add(transformer);
+        addTransform(transformer, null);
         return this;
+    }
+
+    private <T extends Transformer> void addTransform(T transformer, Action<T> c) {
+        if (c != null) {
+            c.execute(transformer);
+        }
+
+        transformers.add(transformer);
     }
 
     /**
@@ -174,6 +207,8 @@ public class ShadowJar extends Jar implements ShadowSpec {
             transform(ServiceFileTransformer.class);
         } catch (IllegalAccessException e) {
         } catch (InstantiationException e) {
+        } catch (NoSuchMethodException e) {
+        } catch (InvocationTargetException e) {
         }
         return this;
     }
@@ -194,6 +229,8 @@ public class ShadowJar extends Jar implements ShadowSpec {
             });
         } catch (IllegalAccessException e) {
         } catch (InstantiationException e) {
+        } catch (NoSuchMethodException e) {
+        } catch (InvocationTargetException e) {
         }
         return this;
     }
@@ -208,6 +245,8 @@ public class ShadowJar extends Jar implements ShadowSpec {
             transform(ServiceFileTransformer.class, configureClosure);
         } catch (IllegalAccessException e) {
         } catch (InstantiationException e) {
+        } catch (NoSuchMethodException e) {
+        } catch (InvocationTargetException e) {
         }
         return this;
     }
@@ -222,6 +261,8 @@ public class ShadowJar extends Jar implements ShadowSpec {
             transform(GroovyExtensionModuleTransformer.class);
         } catch (IllegalAccessException e) {
         } catch (InstantiationException e) {
+        } catch (NoSuchMethodException e) {
+        } catch (InvocationTargetException e) {
         }
         return this;
     }
@@ -241,6 +282,8 @@ public class ShadowJar extends Jar implements ShadowSpec {
             });
         } catch (IllegalAccessException e) {
         } catch (InstantiationException e) {
+        } catch (NoSuchMethodException e) {
+        } catch (InvocationTargetException e) {
         }
         return this;
     }
@@ -266,10 +309,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
      */
     public ShadowJar relocate(String pattern, String destination, Action<SimpleRelocator> configure) {
         SimpleRelocator relocator = new SimpleRelocator(pattern, destination, new ArrayList<String>(), new ArrayList<String>());
-        if (configure != null) {
-            configure.execute(relocator);
-        }
-        relocators.add(relocator);
+        addRelocator(relocator, configure);
         return this;
     }
 
@@ -280,7 +320,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
      * @return this
      */
     public ShadowJar relocate(Relocator relocator) {
-        relocators.add(relocator);
+        addRelocator(relocator, null);
         return this;
     }
 
@@ -290,8 +330,16 @@ public class ShadowJar extends Jar implements ShadowSpec {
      * @param relocatorClass the relocator class to add. Must have a no-arg constructor.
      * @return this
      */
-    public ShadowJar relocate(Class<? extends Relocator> relocatorClass) throws InstantiationException, IllegalAccessException {
+    public ShadowJar relocate(Class<? extends Relocator> relocatorClass) throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         return relocate(relocatorClass, null);
+    }
+
+    private <R extends Relocator> void addRelocator(R relocator, Action<R> configure) {
+        if (configure != null) {
+            configure.execute(relocator);
+        }
+
+        relocators.add(relocator);
     }
 
     /**
@@ -301,16 +349,17 @@ public class ShadowJar extends Jar implements ShadowSpec {
      * @param configure the configuration for the relocator
      * @return this
      */
-    public <R extends Relocator> ShadowJar relocate(Class<R> relocatorClass, Action<R> configure) throws InstantiationException, IllegalAccessException {
-        R relocator = relocatorClass.newInstance();
-        if (configure != null) {
-            configure.execute(relocator);
-        }
-        relocators.add(relocator);
+    public <R extends Relocator> ShadowJar relocate(Class<R> relocatorClass, Action<R> configure) throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+        R relocator = relocatorClass.getDeclaredConstructor().newInstance();
+        addRelocator(relocator, configure);
         return this;
     }
 
-    @Internal
+    private boolean isCacheableRelocator(Class<? extends Relocator> relocatorClass) {
+        return relocatorClass.isAnnotationPresent(CacheableRelocator.class);
+    }
+
+    @Nested
     public List<Transformer> getTransformers() {
         return this.transformers;
     }
@@ -319,7 +368,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
         this.transformers = transformers;
     }
 
-    @Internal
+    @Nested
     public List<Relocator> getRelocators() {
         return this.relocators;
     }
@@ -328,7 +377,7 @@ public class ShadowJar extends Jar implements ShadowSpec {
         this.relocators = relocators;
     }
 
-    @InputFiles @Optional
+    @Classpath @Optional
     public List<Configuration> getConfigurations() {
         return this.configurations;
     }
